--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
       - name: Install, build, and upload your site
-        uses: withastro/action@v3
+        uses: withastro/action@v4
         with:
-          version: latest
+          package-manager: pnpm@latest 
   deploy:
     needs: build
     environment:
